[package]
authors = ["Rick (slikrick) <rickyeckberg@gmail.com>"]
name = "se-csv"
version = "0.2.0"

[dependencies]
chrono = "0.4.0"
csv = "1.0.0-beta.4"
derive-error = "0.0.4"
log = "0.3.8"
reqwest = "0.8.0"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
simplelog = "0.4.2"
structopt = "0.1.1"
structopt-derive = "0.1.1"
toml = "0.4.5"
